lab6/lab6/manifests/20-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab6-ing
  namespace: lab6
spec:
  tls:
  - hosts:
    - lab6.local
    secretName: lab6-tls
  rules:
  - host: lab6.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
